--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: Md Rubayatur
+last: Bhuyian
+watiam: mrrbhuyi
+student: 20743420
+email: mrrbhuyi@uwaterloo.ca
 ...
